--- a/ui/style.css
+++ b/ui/style.css
@@ -28,7 +28,8 @@ body {
   transition: all 0.3s;
 }
 .center:hover img {
-  -moz-transform: scale(2);
-  -webkit-transform: scale(2);
-  transform: scale(2);
+    background-color: black;
+  -moz-transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+  transform: scale(1.5);
 }
