--- a/ui/style.css
+++ b/ui/style.css
@@ -18,16 +18,14 @@ body {
 
 .img-medium {
     height: 200px;
-}
-
-.center img {
-  max-width: 100%;
+    max-width: 100%;
   
   -moz-transition: all 0.3s;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
-.center:hover img {
+
+.img-medium:hover {
   -moz-transform: scale(1.3);
   -webkit-transform: scale(1.3);
   transform: scale(1.3);
