[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    background-image: url("https://scontent-sin6-1.xx.fbcdn.net/v/t1.0-9/12742516_950289501716299_348943222235804234_n.jpg?oh=b52ede78eadc0a1bedcd8880e7ebcf0f&oe=58CFB9A6");
+    background-color: white;
     margin-top: 75px;
 }
 
