--- a/ui/style.css
+++ b/ui/style.css
@@ -34,3 +34,16 @@ body {
 .Alignleft{
       text-align: left; 
 }
+
+.page-wrap {
+  min-height: 100%;
+  /* equal to footer height */
+  margin-bottom: -142px; 
+}
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+.site-footer, .page-wrap:after {
+  height: 142px; 
+}
